Changes to index.js to support Express V4, updated landing page to include log-in info, corrected sign_up.handlebars errors

--- a/views/sign_up.handlebars
+++ b/views/sign_up.handlebars
@@ -5,6 +5,7 @@
         <select name="userType">
             <option value=1>Author</option>
             <option value=0>Reader</option>
+        </select>
     </div>
     <div>
         <label>Username:</label>
