--- a/views/landing_page.handlebars
+++ b/views/landing_page.handlebars
@@ -1,7 +1,7 @@
 <h1>Welcome to the Online Fictional Database</h1>
 <h2>A service to help with all of your story-writing needs</h2>
 
-    <form action="/login" method="post">
+    <form action="/landing_page" method="post">
         <div>
             <label>Username:</label>
             <input type="text" name="username" required/>
