Minor style updates - mostly just headers, etc

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,7 @@
-<h3>Author Dashboard</h3>
+<!--Page to view all universes for specific user-->
+<h1>Author Dashboard</h1>
 <h2>Welcome, {{author.fullName}}</h2>
-<a href="#" class="btn btn-primary">Create New Universe [dummy button for now]</a>
-<br><br>
+
 {{#if universes}}
 {{#each universes}}
 <div class="card">
@@ -17,3 +17,5 @@
     <h5>You do not currently have any universes...</h5>
 </div>
 {{/if}}
+<br>
+<a href="#" class="btn btn-primary">Create New Universe [dummy button for now]</a>
