--- a/views/landing_page.handlebars
+++ b/views/landing_page.handlebars
@@ -1,3 +1,4 @@
+<!--Initial Landing Page with Log-in or Sign Up options-->
 <h1>Welcome to the Online Fictional Database</h1>
 <h2>A service to help with all of your story-writing needs</h2>
 
