--- a/views/sign_up.handlebars
+++ b/views/sign_up.handlebars
@@ -1,4 +1,6 @@
 <!--Form to add new user to database upon sign-up-->
+<h1>Create A New Account</h1>
+
 <form action="/sign_up" method="post">
     <div>
         <label>Account Type:</label>
